exports[`App component renders correctly when the drawer is closed and undocked 1`] = `
<div>
  <div
    className={undefined}
    style={undefined}>
    <div
      className={undefined}
      onTouchTap={[Function anonymous]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "backgroundColor": "rgba(0, 0, 0, 0.54)",
          "height": "100%",
          "left": "-100%",
          "muiPrepared": true,
          "opacity": 0,
          "pointerEvents": "none",
          "position": "fixed",
          "top": 0,
          "transform": "translateZ(0)",
          "transition": "left 0ms cubic-bezier(0.23, 1, 0.32, 1) 400ms, opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": "100%",
          "willChange": "opacity",
          "zIndex": 1200
        }
      } />
    <div
      className={undefined}
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
          "backgroundColor": "#ffffff",
          "borderRadius": "0px",
          "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
                 0 3px 10px rgba(0, 0, 0, 0.23)",
          "boxSizing": "border-box",
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "Roboto, sans-serif",
          "height": "100%",
          "left": 0,
          "muiPrepared": true,
          "overflow": "auto",
          "position": "fixed",
          "top": 0,
          "transform": "translate(-266px, 0)",
          "transition": "transform 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": 256,
          "zIndex": 1300
        }
      }>
      <div
        style={
          Object {
            "muiPrepared": true,
            "padding": 0,
            "paddingBottom": 8,
            "paddingTop": 8
          }
        }>
        <div>
          <span
            disabled={false}
            href={undefined}
            onBlur={[Function anonymous]}
            onClick={[Function anonymous]}
            onFocus={[Function anonymous]}
            onKeyDown={[Function anonymous]}
            onKeyUp={[Function anonymous]}
            onMouseDown={[Function onMouseDown]}
            onMouseEnter={[Function anonymous]}
            onMouseLeave={[Function anonymous]}
            onMouseUp={[Function onMouseUp]}
            onTouchEnd={[Function onTouchEnd]}
            onTouchStart={[Function anonymous]}
            onTouchTap={[Function anonymous]}
            open={null}
            style={
              Object {
                "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                "background": "none",
                "backgroundColor": null,
                "border": 10,
                "boxSizing": "border-box",
                "color": "rgba(0, 0, 0, 0.87)",
                "cursor": "pointer",
                "display": "block",
                "fontFamily": "Roboto, sans-serif",
                "fontSize": 16,
                "fontWeight": "inherit",
                "lineHeight": "16px",
                "margin": 0,
                "muiPrepared": true,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "textDecoration": "none",
                "transform": "translate(0, 0)",
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "verticalAlign": null
              }
            }
            tabIndex={0}
            type="button">
            <div
              onMouseDown={[Function anonymous]}
              onMouseLeave={[Function anonymous]}
              onMouseUp={[Function anonymous]}
              onTouchEnd={[Function anonymous]}
              onTouchStart={[Function anonymous]}>
              <div
                style={
                  Object {
                    "marginLeft": 0,
                    "muiPrepared": true,
                    "paddingBottom": 16,
                    "paddingLeft": 72,
                    "paddingRight": 16,
                    "paddingTop": 16,
                    "position": "relative"
                  }
                }>
                Home
                <svg
                  onMouseEnter={[Function anonymous]}
                  onMouseLeave={[Function anonymous]}
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "block",
                      "fill": "#757575",
                      "height": 24,
                      "left": 4,
                      "margin": 12,
                      "muiPrepared": true,
                      "position": "absolute",
                      "top": 0,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 24
                    }
                  }
                  viewBox="0 0 24 24">
                  <path
                    d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z" />
                </svg>
              </div>
            </div>
          </span>
        </div>
        <div>
          <span
            disabled={false}
            href={undefined}
            onBlur={[Function anonymous]}
            onClick={[Function anonymous]}
            onFocus={[Function anonymous]}
            onKeyDown={[Function anonymous]}
            onKeyUp={[Function anonymous]}
            onMouseDown={[Function onMouseDown]}
            onMouseEnter={[Function anonymous]}
            onMouseLeave={[Function anonymous]}
            onMouseUp={[Function onMouseUp]}
            onTouchEnd={[Function onTouchEnd]}
            onTouchStart={[Function anonymous]}
            onTouchTap={[Function anonymous]}
            open={null}
            style={
              Object {
                "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                "background": "none",
                "backgroundColor": null,
                "border": 10,
                "boxSizing": "border-box",
                "color": "rgba(0, 0, 0, 0.87)",
                "cursor": "pointer",
                "display": "block",
                "fontFamily": "Roboto, sans-serif",
                "fontSize": 16,
                "fontWeight": "inherit",
                "lineHeight": "16px",
                "margin": 0,
                "muiPrepared": true,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "textDecoration": "none",
                "transform": "translate(0, 0)",
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "verticalAlign": null
              }
            }
            tabIndex={0}
            type="button">
            <div
              onMouseDown={[Function anonymous]}
              onMouseLeave={[Function anonymous]}
              onMouseUp={[Function anonymous]}
              onTouchEnd={[Function anonymous]}
              onTouchStart={[Function anonymous]}>
              <div
                style={
                  Object {
                    "marginLeft": 0,
                    "muiPrepared": true,
                    "paddingBottom": 16,
                    "paddingLeft": 72,
                    "paddingRight": 16,
                    "paddingTop": 16,
                    "position": "relative"
                  }
                }>
                Inbox
                <svg
                  onMouseEnter={[Function anonymous]}
                  onMouseLeave={[Function anonymous]}
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "block",
                      "fill": "#757575",
                      "height": 24,
                      "left": 4,
                      "margin": 12,
                      "muiPrepared": true,
                      "position": "absolute",
                      "top": 0,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 24
                    }
                  }
                  viewBox="0 0 24 24">
                  <path
                    d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z" />
                </svg>
              </div>
            </div>
          </span>
        </div>
        <div>
          <span
            disabled={false}
            href={undefined}
            onBlur={[Function anonymous]}
            onClick={[Function anonymous]}
            onFocus={[Function anonymous]}
            onKeyDown={[Function anonymous]}
            onKeyUp={[Function anonymous]}
            onMouseDown={[Function onMouseDown]}
            onMouseEnter={[Function anonymous]}
            onMouseLeave={[Function anonymous]}
            onMouseUp={[Function onMouseUp]}
            onTouchEnd={[Function onTouchEnd]}
            onTouchStart={[Function anonymous]}
            onTouchTap={[Function anonymous]}
            open={null}
            style={
              Object {
                "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                "background": "none",
                "backgroundColor": null,
                "border": 10,
                "boxSizing": "border-box",
                "color": "rgba(0, 0, 0, 0.87)",
                "cursor": "pointer",
                "display": "block",
                "fontFamily": "Roboto, sans-serif",
                "fontSize": 16,
                "fontWeight": "inherit",
                "lineHeight": "16px",
                "margin": 0,
                "muiPrepared": true,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "textDecoration": "none",
                "transform": "translate(0, 0)",
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "verticalAlign": null
              }
            }
            tabIndex={0}
            type="button">
            <div
              onMouseDown={[Function anonymous]}
              onMouseLeave={[Function anonymous]}
              onMouseUp={[Function anonymous]}
              onTouchEnd={[Function anonymous]}
              onTouchStart={[Function anonymous]}>
              <div
                style={
                  Object {
                    "marginLeft": 0,
                    "muiPrepared": true,
                    "paddingBottom": 16,
                    "paddingLeft": 72,
                    "paddingRight": 16,
                    "paddingTop": 16,
                    "position": "relative"
                  }
                }>
                Contexts
                <svg
                  onMouseEnter={[Function anonymous]}
                  onMouseLeave={[Function anonymous]}
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "block",
                      "fill": "#757575",
                      "height": 24,
                      "left": 4,
                      "margin": 12,
                      "muiPrepared": true,
                      "position": "absolute",
                      "top": 0,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 24
                    }
                  }
                  viewBox="0 0 24 24">
                  <path
                    d="M17.63 5.84C17.27 5.33 16.67 5 16 5L5 5.01C3.9 5.01 3 5.9 3 7v10c0 1.1.9 1.99 2 1.99L16 19c.67 0 1.27-.33 1.63-.84L22 12l-4.37-6.16z" />
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="drawer-margin app-bar"
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#e91e63",
        "borderRadius": "0px",
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "flex",
        "fontFamily": "Roboto, sans-serif",
        "muiPrepared": true,
        "paddingLeft": 24,
        "paddingRight": 24,
        "position": "relative",
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "width": "100%",
        "zIndex": 1100
      }
    }>
    <div
      style={
        Object {
          "marginLeft": -16,
          "marginRight": 8,
          "marginTop": 8,
          "muiPrepared": true
        }
      }>
      <button
        disabled={false}
        href={undefined}
        onBlur={[Function anonymous]}
        onClick={[Function anonymous]}
        onFocus={[Function anonymous]}
        onKeyDown={[Function anonymous]}
        onKeyUp={[Function anonymous]}
        onMouseDown={[Function onMouseDown]}
        onMouseEnter={[Function anonymous]}
        onMouseLeave={[Function anonymous]}
        onMouseOut={[Function anonymous]}
        onMouseUp={[Function onMouseUp]}
        onTouchEnd={[Function onTouchEnd]}
        onTouchStart={[Function onTouchStart]}
        onTouchTap={[Function anonymous]}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "background": "none",
            "border": 10,
            "boxSizing": "border-box",
            "cursor": "pointer",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": 0,
            "fontWeight": "inherit",
            "height": 48,
            "margin": 0,
            "muiPrepared": true,
            "outline": "none",
            "overflow": "visible",
            "padding": 12,
            "position": "relative",
            "textDecoration": "none",
            "transform": "translate(0, 0)",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "verticalAlign": null,
            "width": 48
          }
        }
        tabIndex={0}
        type="button">
        <svg
          onMouseEnter={[Function anonymous]}
          onMouseLeave={[Function anonymous]}
          style={
            Object {
              "color": "#ffffff",
              "display": "inline-block",
              "fill": "#ffffff",
              "height": 24,
              "muiPrepared": true,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "userSelect": "none",
              "width": 24
            }
          }
          viewBox="0 0 24 24">
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" />
        </svg>
      </button>
    </div>
    <h1
      onTouchTap={[Function anonymous]}
      style={
        Object {
          "boxFlex": 1,
          "color": "#ffffff",
          "flex": "1",
          "fontSize": 24,
          "fontWeight": 400,
          "height": 64,
          "letterSpacing": 0,
          "lineHeight": "64px",
          "margin": 0,
          "muiPrepared": true,
          "overflow": "hidden",
          "paddingTop": 0,
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap"
        }
      }>
      Oak
    </h1>
  </div>
  <div
    className="drawer-margin app-content" />
</div>
`;

exports[`App component renders correctly when the drawer is docked 1`] = `
<div>
  <div
    className={undefined}
    style={undefined}>
    <div
      className={undefined}
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
          "backgroundColor": "#ffffff",
          "borderRadius": "0px",
          "boxShadow": undefined,
          "boxSizing": "border-box",
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "Roboto, sans-serif",
          "height": "100%",
          "left": 0,
          "muiPrepared": true,
          "overflow": "auto",
          "position": "fixed",
          "top": 0,
          "transform": "translate(0px, 0)",
          "transition": "transform 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": 256,
          "zIndex": 1300
        }
      }>
      <div
        style={
          Object {
            "muiPrepared": true,
            "padding": 0,
            "paddingBottom": 8,
            "paddingTop": 8
          }
        }>
        <div>
          <span
            disabled={false}
            href={undefined}
            onBlur={[Function anonymous]}
            onClick={[Function anonymous]}
            onFocus={[Function anonymous]}
            onKeyDown={[Function anonymous]}
            onKeyUp={[Function anonymous]}
            onMouseDown={[Function onMouseDown]}
            onMouseEnter={[Function anonymous]}
            onMouseLeave={[Function anonymous]}
            onMouseUp={[Function onMouseUp]}
            onTouchEnd={[Function onTouchEnd]}
            onTouchStart={[Function anonymous]}
            onTouchTap={[Function anonymous]}
            open={null}
            style={
              Object {
                "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                "background": "none",
                "backgroundColor": null,
                "border": 10,
                "boxSizing": "border-box",
                "color": "rgba(0, 0, 0, 0.87)",
                "cursor": "pointer",
                "display": "block",
                "fontFamily": "Roboto, sans-serif",
                "fontSize": 16,
                "fontWeight": "inherit",
                "lineHeight": "16px",
                "margin": 0,
                "muiPrepared": true,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "textDecoration": "none",
                "transform": "translate(0, 0)",
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "verticalAlign": null
              }
            }
            tabIndex={0}
            type="button">
            <div
              onMouseDown={[Function anonymous]}
              onMouseLeave={[Function anonymous]}
              onMouseUp={[Function anonymous]}
              onTouchEnd={[Function anonymous]}
              onTouchStart={[Function anonymous]}>
              <div
                style={
                  Object {
                    "marginLeft": 0,
                    "muiPrepared": true,
                    "paddingBottom": 16,
                    "paddingLeft": 72,
                    "paddingRight": 16,
                    "paddingTop": 16,
                    "position": "relative"
                  }
                }>
                Home
                <svg
                  onMouseEnter={[Function anonymous]}
                  onMouseLeave={[Function anonymous]}
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "block",
                      "fill": "#757575",
                      "height": 24,
                      "left": 4,
                      "margin": 12,
                      "muiPrepared": true,
                      "position": "absolute",
                      "top": 0,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 24
                    }
                  }
                  viewBox="0 0 24 24">
                  <path
                    d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z" />
                </svg>
              </div>
            </div>
          </span>
        </div>
        <div>
          <span
            disabled={false}
            href={undefined}
            onBlur={[Function anonymous]}
            onClick={[Function anonymous]}
            onFocus={[Function anonymous]}
            onKeyDown={[Function anonymous]}
            onKeyUp={[Function anonymous]}
            onMouseDown={[Function onMouseDown]}
            onMouseEnter={[Function anonymous]}
            onMouseLeave={[Function anonymous]}
            onMouseUp={[Function onMouseUp]}
            onTouchEnd={[Function onTouchEnd]}
            onTouchStart={[Function anonymous]}
            onTouchTap={[Function anonymous]}
            open={null}
            style={
              Object {
                "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                "background": "none",
                "backgroundColor": null,
                "border": 10,
                "boxSizing": "border-box",
                "color": "rgba(0, 0, 0, 0.87)",
                "cursor": "pointer",
                "display": "block",
                "fontFamily": "Roboto, sans-serif",
                "fontSize": 16,
                "fontWeight": "inherit",
                "lineHeight": "16px",
                "margin": 0,
                "muiPrepared": true,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "textDecoration": "none",
                "transform": "translate(0, 0)",
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "verticalAlign": null
              }
            }
            tabIndex={0}
            type="button">
            <div
              onMouseDown={[Function anonymous]}
              onMouseLeave={[Function anonymous]}
              onMouseUp={[Function anonymous]}
              onTouchEnd={[Function anonymous]}
              onTouchStart={[Function anonymous]}>
              <div
                style={
                  Object {
                    "marginLeft": 0,
                    "muiPrepared": true,
                    "paddingBottom": 16,
                    "paddingLeft": 72,
                    "paddingRight": 16,
                    "paddingTop": 16,
                    "position": "relative"
                  }
                }>
                Inbox
                <svg
                  onMouseEnter={[Function anonymous]}
                  onMouseLeave={[Function anonymous]}
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "block",
                      "fill": "#757575",
                      "height": 24,
                      "left": 4,
                      "margin": 12,
                      "muiPrepared": true,
                      "position": "absolute",
                      "top": 0,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 24
                    }
                  }
                  viewBox="0 0 24 24">
                  <path
                    d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z" />
                </svg>
              </div>
            </div>
          </span>
        </div>
        <div>
          <span
            disabled={false}
            href={undefined}
            onBlur={[Function anonymous]}
            onClick={[Function anonymous]}
            onFocus={[Function anonymous]}
            onKeyDown={[Function anonymous]}
            onKeyUp={[Function anonymous]}
            onMouseDown={[Function onMouseDown]}
            onMouseEnter={[Function anonymous]}
            onMouseLeave={[Function anonymous]}
            onMouseUp={[Function onMouseUp]}
            onTouchEnd={[Function onTouchEnd]}
            onTouchStart={[Function anonymous]}
            onTouchTap={[Function anonymous]}
            open={null}
            style={
              Object {
                "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                "background": "none",
                "backgroundColor": null,
                "border": 10,
                "boxSizing": "border-box",
                "color": "rgba(0, 0, 0, 0.87)",
                "cursor": "pointer",
                "display": "block",
                "fontFamily": "Roboto, sans-serif",
                "fontSize": 16,
                "fontWeight": "inherit",
                "lineHeight": "16px",
                "margin": 0,
                "muiPrepared": true,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "textDecoration": "none",
                "transform": "translate(0, 0)",
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "verticalAlign": null
              }
            }
            tabIndex={0}
            type="button">
            <div
              onMouseDown={[Function anonymous]}
              onMouseLeave={[Function anonymous]}
              onMouseUp={[Function anonymous]}
              onTouchEnd={[Function anonymous]}
              onTouchStart={[Function anonymous]}>
              <div
                style={
                  Object {
                    "marginLeft": 0,
                    "muiPrepared": true,
                    "paddingBottom": 16,
                    "paddingLeft": 72,
                    "paddingRight": 16,
                    "paddingTop": 16,
                    "position": "relative"
                  }
                }>
                Contexts
                <svg
                  onMouseEnter={[Function anonymous]}
                  onMouseLeave={[Function anonymous]}
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "block",
                      "fill": "#757575",
                      "height": 24,
                      "left": 4,
                      "margin": 12,
                      "muiPrepared": true,
                      "position": "absolute",
                      "top": 0,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 24
                    }
                  }
                  viewBox="0 0 24 24">
                  <path
                    d="M17.63 5.84C17.27 5.33 16.67 5 16 5L5 5.01C3.9 5.01 3 5.9 3 7v10c0 1.1.9 1.99 2 1.99L16 19c.67 0 1.27-.33 1.63-.84L22 12l-4.37-6.16z" />
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="drawer-margin app-bar"
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#e91e63",
        "borderRadius": "0px",
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "flex",
        "fontFamily": "Roboto, sans-serif",
        "muiPrepared": true,
        "paddingLeft": 24,
        "paddingRight": 24,
        "position": "relative",
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "width": "100%",
        "zIndex": 1100
      }
    }>
    <div
      style={
        Object {
          "marginLeft": -16,
          "marginRight": 8,
          "marginTop": 8,
          "muiPrepared": true
        }
      }>
      <div />
    </div>
    <h1
      onTouchTap={[Function anonymous]}
      style={
        Object {
          "boxFlex": 1,
          "color": "#ffffff",
          "flex": "1",
          "fontSize": 24,
          "fontWeight": 400,
          "height": 64,
          "letterSpacing": 0,
          "lineHeight": "64px",
          "margin": 0,
          "muiPrepared": true,
          "overflow": "hidden",
          "paddingTop": 0,
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap"
        }
      }>
      Oak
    </h1>
  </div>
  <div
    className="drawer-margin app-content" />
</div>
`;

exports[`App component renders correctly when the drawer is open and undocked 1`] = `
<div>
  <div
    className={undefined}
    style={undefined}>
    <div
      className={undefined}
      onTouchTap={[Function anonymous]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "backgroundColor": "rgba(0, 0, 0, 0.54)",
          "height": "100%",
          "left": 0,
          "muiPrepared": true,
          "opacity": 1,
          "pointerEvents": "auto",
          "position": "fixed",
          "top": 0,
          "transform": "translateZ(0)",
          "transition": "left 0ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": "100%",
          "willChange": "opacity",
          "zIndex": 1200
        }
      } />
    <div
      className={undefined}
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
          "backgroundColor": "#ffffff",
          "borderRadius": "0px",
          "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
                 0 3px 10px rgba(0, 0, 0, 0.23)",
          "boxSizing": "border-box",
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "Roboto, sans-serif",
          "height": "100%",
          "left": 0,
          "muiPrepared": true,
          "overflow": "auto",
          "position": "fixed",
          "top": 0,
          "transform": "translate(0px, 0)",
          "transition": "transform 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": 256,
          "zIndex": 1300
        }
      }>
      <div
        style={
          Object {
            "muiPrepared": true,
            "padding": 0,
            "paddingBottom": 8,
            "paddingTop": 8
          }
        }>
        <div>
          <span
            disabled={false}
            href={undefined}
            onBlur={[Function anonymous]}
            onClick={[Function anonymous]}
            onFocus={[Function anonymous]}
            onKeyDown={[Function anonymous]}
            onKeyUp={[Function anonymous]}
            onMouseDown={[Function onMouseDown]}
            onMouseEnter={[Function anonymous]}
            onMouseLeave={[Function anonymous]}
            onMouseUp={[Function onMouseUp]}
            onTouchEnd={[Function onTouchEnd]}
            onTouchStart={[Function anonymous]}
            onTouchTap={[Function anonymous]}
            open={null}
            style={
              Object {
                "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                "background": "none",
                "backgroundColor": null,
                "border": 10,
                "boxSizing": "border-box",
                "color": "rgba(0, 0, 0, 0.87)",
                "cursor": "pointer",
                "display": "block",
                "fontFamily": "Roboto, sans-serif",
                "fontSize": 16,
                "fontWeight": "inherit",
                "lineHeight": "16px",
                "margin": 0,
                "muiPrepared": true,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "textDecoration": "none",
                "transform": "translate(0, 0)",
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "verticalAlign": null
              }
            }
            tabIndex={0}
            type="button">
            <div
              onMouseDown={[Function anonymous]}
              onMouseLeave={[Function anonymous]}
              onMouseUp={[Function anonymous]}
              onTouchEnd={[Function anonymous]}
              onTouchStart={[Function anonymous]}>
              <div
                style={
                  Object {
                    "marginLeft": 0,
                    "muiPrepared": true,
                    "paddingBottom": 16,
                    "paddingLeft": 72,
                    "paddingRight": 16,
                    "paddingTop": 16,
                    "position": "relative"
                  }
                }>
                Home
                <svg
                  onMouseEnter={[Function anonymous]}
                  onMouseLeave={[Function anonymous]}
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "block",
                      "fill": "#757575",
                      "height": 24,
                      "left": 4,
                      "margin": 12,
                      "muiPrepared": true,
                      "position": "absolute",
                      "top": 0,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 24
                    }
                  }
                  viewBox="0 0 24 24">
                  <path
                    d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z" />
                </svg>
              </div>
            </div>
          </span>
        </div>
        <div>
          <span
            disabled={false}
            href={undefined}
            onBlur={[Function anonymous]}
            onClick={[Function anonymous]}
            onFocus={[Function anonymous]}
            onKeyDown={[Function anonymous]}
            onKeyUp={[Function anonymous]}
            onMouseDown={[Function onMouseDown]}
            onMouseEnter={[Function anonymous]}
            onMouseLeave={[Function anonymous]}
            onMouseUp={[Function onMouseUp]}
            onTouchEnd={[Function onTouchEnd]}
            onTouchStart={[Function anonymous]}
            onTouchTap={[Function anonymous]}
            open={null}
            style={
              Object {
                "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                "background": "none",
                "backgroundColor": null,
                "border": 10,
                "boxSizing": "border-box",
                "color": "rgba(0, 0, 0, 0.87)",
                "cursor": "pointer",
                "display": "block",
                "fontFamily": "Roboto, sans-serif",
                "fontSize": 16,
                "fontWeight": "inherit",
                "lineHeight": "16px",
                "margin": 0,
                "muiPrepared": true,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "textDecoration": "none",
                "transform": "translate(0, 0)",
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "verticalAlign": null
              }
            }
            tabIndex={0}
            type="button">
            <div
              onMouseDown={[Function anonymous]}
              onMouseLeave={[Function anonymous]}
              onMouseUp={[Function anonymous]}
              onTouchEnd={[Function anonymous]}
              onTouchStart={[Function anonymous]}>
              <div
                style={
                  Object {
                    "marginLeft": 0,
                    "muiPrepared": true,
                    "paddingBottom": 16,
                    "paddingLeft": 72,
                    "paddingRight": 16,
                    "paddingTop": 16,
                    "position": "relative"
                  }
                }>
                Inbox
                <svg
                  onMouseEnter={[Function anonymous]}
                  onMouseLeave={[Function anonymous]}
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "block",
                      "fill": "#757575",
                      "height": 24,
                      "left": 4,
                      "margin": 12,
                      "muiPrepared": true,
                      "position": "absolute",
                      "top": 0,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 24
                    }
                  }
                  viewBox="0 0 24 24">
                  <path
                    d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z" />
                </svg>
              </div>
            </div>
          </span>
        </div>
        <div>
          <span
            disabled={false}
            href={undefined}
            onBlur={[Function anonymous]}
            onClick={[Function anonymous]}
            onFocus={[Function anonymous]}
            onKeyDown={[Function anonymous]}
            onKeyUp={[Function anonymous]}
            onMouseDown={[Function onMouseDown]}
            onMouseEnter={[Function anonymous]}
            onMouseLeave={[Function anonymous]}
            onMouseUp={[Function onMouseUp]}
            onTouchEnd={[Function onTouchEnd]}
            onTouchStart={[Function anonymous]}
            onTouchTap={[Function anonymous]}
            open={null}
            style={
              Object {
                "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                "background": "none",
                "backgroundColor": null,
                "border": 10,
                "boxSizing": "border-box",
                "color": "rgba(0, 0, 0, 0.87)",
                "cursor": "pointer",
                "display": "block",
                "fontFamily": "Roboto, sans-serif",
                "fontSize": 16,
                "fontWeight": "inherit",
                "lineHeight": "16px",
                "margin": 0,
                "muiPrepared": true,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "textDecoration": "none",
                "transform": "translate(0, 0)",
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "verticalAlign": null
              }
            }
            tabIndex={0}
            type="button">
            <div
              onMouseDown={[Function anonymous]}
              onMouseLeave={[Function anonymous]}
              onMouseUp={[Function anonymous]}
              onTouchEnd={[Function anonymous]}
              onTouchStart={[Function anonymous]}>
              <div
                style={
                  Object {
                    "marginLeft": 0,
                    "muiPrepared": true,
                    "paddingBottom": 16,
                    "paddingLeft": 72,
                    "paddingRight": 16,
                    "paddingTop": 16,
                    "position": "relative"
                  }
                }>
                Contexts
                <svg
                  onMouseEnter={[Function anonymous]}
                  onMouseLeave={[Function anonymous]}
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "block",
                      "fill": "#757575",
                      "height": 24,
                      "left": 4,
                      "margin": 12,
                      "muiPrepared": true,
                      "position": "absolute",
                      "top": 0,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 24
                    }
                  }
                  viewBox="0 0 24 24">
                  <path
                    d="M17.63 5.84C17.27 5.33 16.67 5 16 5L5 5.01C3.9 5.01 3 5.9 3 7v10c0 1.1.9 1.99 2 1.99L16 19c.67 0 1.27-.33 1.63-.84L22 12l-4.37-6.16z" />
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="drawer-margin app-bar"
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#e91e63",
        "borderRadius": "0px",
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "flex",
        "fontFamily": "Roboto, sans-serif",
        "muiPrepared": true,
        "paddingLeft": 24,
        "paddingRight": 24,
        "position": "relative",
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "width": "100%",
        "zIndex": 1100
      }
    }>
    <div
      style={
        Object {
          "marginLeft": -16,
          "marginRight": 8,
          "marginTop": 8,
          "muiPrepared": true
        }
      }>
      <button
        disabled={false}
        href={undefined}
        onBlur={[Function anonymous]}
        onClick={[Function anonymous]}
        onFocus={[Function anonymous]}
        onKeyDown={[Function anonymous]}
        onKeyUp={[Function anonymous]}
        onMouseDown={[Function onMouseDown]}
        onMouseEnter={[Function anonymous]}
        onMouseLeave={[Function anonymous]}
        onMouseOut={[Function anonymous]}
        onMouseUp={[Function onMouseUp]}
        onTouchEnd={[Function onTouchEnd]}
        onTouchStart={[Function onTouchStart]}
        onTouchTap={[Function anonymous]}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "background": "none",
            "border": 10,
            "boxSizing": "border-box",
            "cursor": "pointer",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": 0,
            "fontWeight": "inherit",
            "height": 48,
            "margin": 0,
            "muiPrepared": true,
            "outline": "none",
            "overflow": "visible",
            "padding": 12,
            "position": "relative",
            "textDecoration": "none",
            "transform": "translate(0, 0)",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "verticalAlign": null,
            "width": 48
          }
        }
        tabIndex={0}
        type="button">
        <svg
          onMouseEnter={[Function anonymous]}
          onMouseLeave={[Function anonymous]}
          style={
            Object {
              "color": "#ffffff",
              "display": "inline-block",
              "fill": "#ffffff",
              "height": 24,
              "muiPrepared": true,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "userSelect": "none",
              "width": 24
            }
          }
          viewBox="0 0 24 24">
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" />
        </svg>
      </button>
    </div>
    <h1
      onTouchTap={[Function anonymous]}
      style={
        Object {
          "boxFlex": 1,
          "color": "#ffffff",
          "flex": "1",
          "fontSize": 24,
          "fontWeight": 400,
          "height": 64,
          "letterSpacing": 0,
          "lineHeight": "64px",
          "margin": 0,
          "muiPrepared": true,
          "overflow": "hidden",
          "paddingTop": 0,
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap"
        }
      }>
      Oak
    </h1>
  </div>
  <div
    className="drawer-margin app-content" />
</div>
`;
